--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.1.3",
+    "express": "^4.18.2",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22"
   }
